# telegram_assistant_bot

./: .gitignore  GPASpider.py  README.md  api.py  main.py  pyproject.toml  requirements.txt  start.py
.github/workflows/: redeploy.yml
configs/: bot.service
plugins/audio_recognization/: __main__.py
plugins/calender/: __main__.py
plugins/caption_gen/: __main__.py
plugins/chatgpt_conversation/: __main__.py
plugins/heartbeat/: __main__.py
plugins/mensa/: __main__.py
plugins/modify_calender/: __main__.py
plugins/test1/: __main_.py
plugins/time_arrangement/: __main__.py
tg_bot/: start.py
tg_bot/core/: api.py  auth.py  handler.py  handler_helper.py  help.py
tg_bot/plugins/calender/: __main__.py
tg_bot/plugins/conversation/: __main__.py
tg_bot/plugins/currency/: __main__.py
tg_bot/plugins/heartbeat/: __main__.py
tg_bot/plugins/mensa/: __main__.py
tg_bot/plugins/nbnhhsh/: __main__.py
tg_bot/plugins/time_arrangement/: __main__.py
tg_bot/utils/: consts.py
tools/: calendar_modify.py
