[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "telegram-assistant-bot"
version = "0.1.1"
requires-python = ">=3.11,<4.0"
dependencies = [
    "ffmpeg-python",
    "google-api-core",
    "google-api-python-client",
    "google-auth",
    "google-auth-httplib2",
    "google-auth-oauthlib",
    "googleapis-common-protos",
    "openai",
    "openai-whisper",
    "OpenAIAuth",
    "python-telegram-bot",
    "regex",
    "requests",
    # "torch",
    "tqdm",
    "tzlocal",
    "urllib3",
]

[tool.setuptools]
packages = ["tg_bot"]

[project.scripts]
tg-assistant-start = "tg_bot.start:main"
